# dnd-dark-heresy

./: .gitignore  populate_admin.sh  pyproject.toml  todo.txt
apps/character/: admin.py  apps.py  enums.py  froms.py  models.py  urls.py  utils.py  views.py
apps/character/migrations/: 0001_initial.py  0002_alter_armour_table_alter_character_table_and_more.py
apps/character/templates/: base.html  base_generic.html
apps/character/templates/character/: create.html  detail.html  list.html
apps/character_builder/: admin.py  apps.py  froms.py  models.py  views.py
apps/character_builder/migrations/: 0001_initial.py  0002_alter_armour_table_alter_character_table_and_more.py  0002_alter_talent_group.py  0003_alter_careerpath_table_alter_careerrank_table_and_more.py
apps/character_builder/templates/: base.html
config/: settings.py  urls.py
