[tool.poetry]
name = "dnd-dark-heresy"
version = "0.1.0"
description = ""
authors = ["Klim <klimrus61@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"